# cs61c_machine_structure

./: .gitignore  Makefile  README  RouteTime  assembler.py  flights.c
labs/: Exercise 1.
labs/01/: eccentric  gdbcommands.txt  hello  ll_cycle  ll_cycle.c  ll_equal
labs/01/hello.dSYM/Contents/Resources/DWARF/: hello
labs/01/ll_cycle.dSYM/Contents/Resources/DWARF/: ll_cycle
labs/01/ll_equal.dSYM/Contents/Resources/DWARF/: ll_equal
labs/02/: bit_ops  bit_ops.c  lfsr  lfsr.c  vector-test  vector.c
labs/02/bit_ops.dSYM/Contents/Resources/DWARF/: bit_ops
labs/02/lfsr.dSYM/Contents/Resources/DWARF/: lfsr
labs/03/: checkoff1.txt  listmanips.s  nchoosek.s
labs/04/: first1pos.s  lab4_ex1.s
labs/06/: lab6ALU.circ  parta.circ
labs/07/: fib15.circ
labs/08/: cache.s  matrixMultiply  transpose
labs/08/matrixMultiply.dSYM/Contents/Resources/DWARF/: matrixMultiply
labs/08/transpose.dSYM/Contents/Resources/DWARF/: transpose
labs/10/: dotp  dotp.c  hello  v_add  v_add.c
labs/mini-bio/: mini-bio.txt
practice_C/: sizeof  sizeof.c
proj1/: flights.c
projects/01/: CMakeLists.txt  RouteTime  flights.c
projects/01/examples/1/: Kyo's Result  airports1.txt  route1.txt  schedules1.txt
projects/01/examples/2/: Kyo's result  airports1.txt  route1.txt  schedules1.txt
projects/02/: assembler.c  test_assembler.c
projects/02/input/: Ingyo.s
projects/02/src/: tables.c  translate.c  translate_utils.c
projects/03/: cpu.circ  regfile.circ
projects/03/tests/: alu.circ  regfile.circ
projects/04/: CMakeLists.txt  calcDepthNaive.c  calcDepthOptimized.c
src/: translate_utils.c
